# projekt_ray_tracing

./: CMakeLists.txt  README.md
include/: Camera.h  Color.h  HitRecord.h  Material.h  MirrorMaterial.h  Object.h  Ray.h  Renderer.h  Scene.h  Sphere.h  Vec3.h
src/: Camera.cpp  Color.cpp  MirrorMaterial.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Vec3.cpp  main.cpp
